// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en GifExpertApp debe mostrar correctamente el componente 1`] = `
<Fragment>
  <h2>
    Search Gifs
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en GifExpertApp debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    Search Gifs
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Seinfeld"
      key="Seinfeld"
    />
    <GifGrid
      category="Bobs Burgers"
      key="Bobs Burgers"
    />
  </ol>
</Fragment>
`;
